Cleaned out some old code.  Improved the code modularity - now there is a 'controller' that serves as the single point of contact between the html and the rest of the code.

--- a/src/scss/pomodoro.scss
+++ b/src/scss/pomodoro.scss
@@ -1,11 +1,17 @@
-button.button-start.ready {
-  span.start-text {
-    visibility: inherit;
-  }
+button.ready {
+  display: inherit;
 }
 
-button.button-start {
-  span.start-text {
-    visibility: hidden;
+button[disabled].button-start, .button-pause, .button-resume {
+  display: none;
+}
+
+button.button-start, .button-pause, .button-resume {
+  width: 80px;
+}
+
+.time-display {
+  .zero {
+    opacity: 0.5
   }
 }
